--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     
     <p>Hello</p>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Perspiciatis, repudiandae, odit ipsa est doloribus hic assumenda sed laudantium veritatis deleniti temporibus. Aliquid fugit voluptatibus excepturi quia quaerat vitae sequi quo.</p>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.t voluptatibus excepturi quia quaerat vitae sequi quo.</p>
 
     <script src="js/script.js"></script>
 </body>
