index.html mod from new folder

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <p>Hello</p>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.t voluptatibus excepturi quia quaerat vitae sequi quo.</p>
 
+    <h2>Modificate</h2>
+
     <script src="js/script.js"></script>
 </body>
 </html>
